--- a/css/styles.css
+++ b/css/styles.css
@@ -244,7 +244,7 @@ background: #001033;
 #hero-banner{
   overflow: hidden;
   height:650px;
-  color: #4C4C4C;
+  color: #000000;
   border-bottom: 1px solid #BDBDBD;
 }
 #hero-banner.item {
@@ -260,15 +260,23 @@ background: #001033;
   width: 100%;
   height: 100%;
   color: #000;
+  
 }
 #hero-banner{
   background: #F7F7F7 url('../images/background.jpg') no-repeat 92% bottom; 
+
   }
 #hero-banner h2 {
   margin-top: 180px;
-  font-size: 39px;
-  line-height: 49px;  
+  font-size: 45px;
+  line-height: 49px;
+    
+} 
+#hero-banner p{
+  font-size: 30px;
+  line-height: 35px
 }
+
 #hero-banner.banner-inner h2 > span {
   color: #45aed6;
 }
@@ -671,6 +679,7 @@ color: #fff !important;
 /*Team*/ 
 #team {
   padding: 140px 0;
+  background-color: #7777773d;
 }
  
 /*Testimonial Area*/
@@ -921,6 +930,36 @@ border-radius: 50%;
 position: absolute;
 width: 100px;
 }
+
+.mapBox{
+  position:relative;
+  margin-top: 40px;
+  margin-bottom: 50px;
+}
+
+.mapBox iframe{
+  width: 100%;
+  height: 300px;
+}
+
+		.whatsapp-link {
+			position: fixed;
+			width: 60px;
+			height: 60px;
+			bottom: 40px;
+			right: 40px;
+			background-color: #25d366;
+			color: #fff;
+			border-radius: 50px;
+			text-align: center;
+			font-size: 30px;
+			box-shadow: 1px 1px 2px #888;
+			z-index: 1000;
+		}
+
+		.fa-whatsapp {
+			margin-top: 16px;
+		}
 /***********************
 ********* Footer ******
 ************************/
@@ -963,12 +1002,10 @@ text-align: center;
 margin-top: 280px;
 font-size: 26px;
 line-height: 40px;
-background: rgba(255, 255, 255, 0.68);
 padding: 10px;
 }
 #hero-banner p {
 font-size: 18px;
-background: rgba(255, 255, 255, 0.68);
 padding: 10px;
 }
 #portfolio .portfolio-filter {
