--- a/css/styles.css
+++ b/css/styles.css
@@ -679,7 +679,7 @@ color: #fff !important;
 /*Team*/ 
 #team {
   padding: 140px 0;
-  background-color: #7777773d;
+  background-color: #62bdf0;
 }
  
 /*Testimonial Area*/
